Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.50:
	* Updated polish translation (Thanks Przemyslaw Sulek)
	* Able to import GnomeICU contact lists

version 0.49 (11/29/2001):
	* Can compile against GTK+ 2.0 (version 1.3.10/1.3.11)
	* Confirm before removing buddies
	* Updated Russian translation (thanks Grigory Bakunov)
	* Updated Korean translation (thanks Ho-seok Lee, also for
	  resized ICQ icons)
	* Updated Dutch translation (thanks Floris Eshuis)
	* Yahoo updates (thanks Brian Macke)
	* Jabber updates
	* Zephyr updates (thanks Arun A Tharuvai)
	* Gadu-Gadu updates (thanks Arkadiusz Miskiewicz)
	* Option to show aliases in conversation tabs
	* Option to hide windows after sending messages
	* licq2gaim.pl conversion script (thanks Arturo Cisneros, Jr.)

version 0.48 (11/18/2001):
	* Right-click on links to open/copy URL
	* Yahoo changes
	* Oscar can send/receive offline messages in ICQ. Since the "real"
	  ICQ protocol isn't working too well it's recommended that you
	  use Oscar for ICQ.

version 0.47 (11/01/2001):
	* Better font loading (pays attention to charset now)
	  (thanks Arkadiusz Miskiewicz)
	* Better recoding in Gadu-Gadu (thanks Arkadiusz Miskiewicz)
	* Open Mail button for when you get new mail (Yahoo and MSN)
	* New buddy pounce option: Popup Notification
	* When adding a buddy, the groups list now updates when you switch
	  accounts.
	* When creating a new buddy pounce, gaim now automagically
	  selects "on away" or "on idle", if the user is away
	  or idle.
	* Add Opera to the available browsers (thanks Brian Enigma)
	* Improved log viewer (thanks to Ben Miller)
	* When you are queueing away messages, double clicking on
	  a buddy's name will cause the messages for that name to be
	  dequeued.
	* You can choose which sound player you use at run-time
	  (thanks Ben Miller)
	* When someone adds you to their buddy list, it asks if you want
	  to add them as well (Yahoo, ICQ, and MSN) (thanks Nathan Walp)